--- a/2-tract-vegetation.ipynb
+++ b/2-tract-vegetation.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "source": [
     "**Conclusions:** Key conclusions & outputs are:\n",
-    "* The `ndvi` table is addded to the SQLite database `vegetation.db`. The table contains the average tract-level vegetation density data as measured on 17 May 2021.\n",
+    "* The SQLite database `vegetation.db` is created, and vegetation densities are added in the `ndvi` table. The table contains the average tract-level vegetation density data as measured on 17 May 2021.\n",
     "* No analysis of the data is included here. This will be in a separate notebook."
    ]
   },
