Unify SQLite databases
Edited notebooks to output all data to a single SQLite database, greenspace.db, rather than disparate databases for socioeconomic data + vegetation density data.

--- a/1-census-data-cleaning.ipynb
+++ b/1-census-data-cleaning.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "source": [
     "**Conclusions:** Key conclusions & outputs are:\n",
-    "* The SQLite database `acs2020.db` is created. It includes three tables, one for each category of data obtained from the ACS: `demographics`, `economics`, and `housing`.\n",
+    "* The SQLite database `greenspace.db` is created. It includes three tables, one for each category of data obtained from the ACS: `demographics`, `economics`, and `housing`.\n",
     "* No analysis of the data is included here -- this is in a separate notebook."
    ]
   },
@@ -887,7 +887,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with create_engine(\"sqlite:///acs2020.db\").connect() as db:\n",
+    "with create_engine(\"sqlite:///greenspace.db\").connect() as db:\n",
     "    df_demo.to_sql(\"demographics\", db)"
    ]
   },
@@ -1675,7 +1675,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with create_engine(\"sqlite:///acs2020.db\").connect() as db:\n",
+    "with create_engine(\"sqlite:///greenspace.db\").connect() as db:\n",
     "    df_econ.to_sql(\"economics\", db)"
    ]
   },
@@ -2698,7 +2698,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with create_engine(\"sqlite:///acs2020.db\").connect() as db:\n",
+    "with create_engine(\"sqlite:///greenspace.db\").connect() as db:\n",
     "    df_econ.to_sql(\"housing\", db)"
    ]
   }
