--- a/2-tract-vegetation.ipynb
+++ b/2-tract-vegetation.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "source": [
     "**Conclusions:** Key conclusions & outputs are:\n",
-    "* The SQLite database `vegetation.db` is created, and vegetation densities are added in the `ndvi` table. The table contains the average tract-level vegetation density data as measured on 17 May 2021.\n",
+    "* The SQLite database `greenspace.db` is updated, adding vegetation densities in the `ndvi` table. The table contains the average tract-level vegetation density data as measured on 17 May 2021.\n",
     "* No analysis of the data is included here. This will be in a separate notebook."
    ]
   },
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "37d12654-844e-49f2-990f-48a39f809b4d",
    "metadata": {},
    "outputs": [],
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "6e7e90b3-ec7c-4d53-9a54-6a2dc2b207ca",
    "metadata": {},
    "outputs": [
@@ -1014,7 +1014,7 @@
        "211  POLYGON ((-2015431.033 1478051.321, -2015410.7...       0.339691  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "961aca50-a96d-47fe-884a-6856dd0d1c02",
    "metadata": {},
    "outputs": [],
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "f0b6bd9a-077b-487a-ae7e-8afefb55cd93",
    "metadata": {},
    "outputs": [
@@ -1073,7 +1073,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "955a67df-3458-4274-8086-1c9f9afacd6d",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1184,7 @@
        "06037300200       0.339691"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "9e32a3bc-ba42-4de6-9f13-d8a48079a841",
    "metadata": {},
    "outputs": [],
@@ -1216,12 +1216,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "id": "7495b39a-0ffe-4340-b282-1a6ac262a560",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with create_engine(\"sqlite:///vegetation.db\").connect() as db:\n",
+    "with create_engine(\"sqlite:///greenspace.db\").connect() as db:\n",
     "    ndvi.to_sql(\"ndvi\", db)"
    ]
   }
