Correcting errors in SQL database writing
Corrected minor errors in writing to the SQL databases. (1) One column name in the vegetation density data, "ndvi" table, was improperly formatted with a hyphen & replaced with an underscore.  (2) Census tract-level housing data was improperly written to the "economics" table containing income & employment data rather than the "housing" table.

--- a/1-census-data-cleaning.ipynb
+++ b/1-census-data-cleaning.ipynb
@@ -2699,7 +2699,7 @@
    "outputs": [],
    "source": [
     "with create_engine(\"sqlite:///greenspace.db\").connect() as db:\n",
-    "    df_econ.to_sql(\"housing\", db)"
+    "    df_housing.to_sql(\"housing\", db)"
    ]
   }
  ],
