--- a/2-tract-vegetation.ipynb
+++ b/2-tract-vegetation.ipynb
@@ -846,7 +846,7 @@
    "outputs": [],
    "source": [
     "tracts = tracts.apply(calc_mean_ndvi,\n",
-    "                      mean_ndvi_colname = \"NDVI-20210517\",\n",
+    "                      mean_ndvi_colname = \"NDVI_20210517\",\n",
     "                      axis = \"columns\")"
    ]
   },
@@ -898,7 +898,7 @@
        "      <th>INTPTLAT</th>\n",
        "      <th>INTPTLON</th>\n",
        "      <th>geometry</th>\n",
-       "      <th>NDVI-20210517</th>\n",
+       "      <th>NDVI_20210517</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1006,7 +1006,7 @@
        "78   G5020        S   515339       0  +34.1853923  -118.3128440   \n",
        "211  G5020        S  1943986   10136  +34.2283768  -118.2386852   \n",
        "\n",
-       "                                              geometry  NDVI-20210517  \n",
+       "                                              geometry  NDVI_20210517  \n",
        "17   POLYGON ((-2048516.056 1468406.793, -2048425.5...       0.469434  \n",
        "62   POLYGON ((-2015282.560 1478655.361, -2015268.0...       0.418855  \n",
        "65   POLYGON ((-2015719.635 1476884.936, -2015713.8...       0.265917  \n",
@@ -1050,7 +1050,7 @@
    "outputs": [],
    "source": [
     "tracts = tracts.dropna(axis = \"index\",\n",
-    "                       subset = [\"NDVI-20210517\"])"
+    "                       subset = [\"NDVI_20210517\"])"
    ]
   },
   {
@@ -1091,7 +1091,7 @@
     }
    ],
    "source": [
-    "tracts.plot(column = \"NDVI-20210517\",\n",
+    "tracts.plot(column = \"NDVI_20210517\",\n",
     "            figsize = (20, 20),\n",
     "            legend = True,\n",
     "            cmap = \"Greens\"\n",
@@ -1142,7 +1142,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>NDVI-20210517</th>\n",
+       "      <th>NDVI_20210517</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Tract_FIPS</th>\n",
@@ -1175,7 +1175,7 @@
        "</div>"
       ],
       "text/plain": [
-       "             NDVI-20210517\n",
+       "             NDVI_20210517\n",
        "Tract_FIPS                \n",
        "06037262601       0.469434\n",
        "06037300100       0.418855\n",
@@ -1190,7 +1190,7 @@
     }
    ],
    "source": [
-    "ndvi = tracts[[\"GEOID\", \"NDVI-20210517\"]]\n",
+    "ndvi = tracts[[\"GEOID\", \"NDVI_20210517\"]]\n",
     "ndvi = ndvi.set_index(\"GEOID\")\n",
     "ndvi.index.name = \"Tract_FIPS\"\n",
     "ndvi.head()"
