Add census tract area
Updated to include land area for each census tract in the "ndvi" table of greenspace.db.

--- a/2-tract-vegetation.ipynb
+++ b/2-tract-vegetation.ipynb
@@ -1112,7 +1112,7 @@
    "id": "db1e4f3a-c058-44d1-bcef-be0be283beef",
    "metadata": {},
    "source": [
-    "First, create a new dataframe from `tracts` containing the tract-level FIPS codes (currently in the `GEOID` column) and the NDVI data:"
+    "First, create a new dataframe from `tracts` containing the tract-level FIPS codes (currently in the `GEOID` column), the tract's land area (`ALAND`, in square meters) and the NDVI data:"
    ]
   },
   {
@@ -1143,9 +1143,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>NDVI_20210517</th>\n",
+       "      <th>Land_area_m2</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Tract_FIPS</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1153,35 +1155,40 @@
        "    <tr>\n",
        "      <th>06037262601</th>\n",
        "      <td>0.469434</td>\n",
+       "      <td>3620351</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>06037300100</th>\n",
        "      <td>0.418855</td>\n",
+       "      <td>4591342</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>06037300501</th>\n",
        "      <td>0.265917</td>\n",
+       "      <td>1260255</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>06037310701</th>\n",
        "      <td>0.156655</td>\n",
+       "      <td>515339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>06037300200</th>\n",
        "      <td>0.339691</td>\n",
+       "      <td>1943986</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             NDVI_20210517\n",
-       "Tract_FIPS                \n",
-       "06037262601       0.469434\n",
-       "06037300100       0.418855\n",
-       "06037300501       0.265917\n",
-       "06037310701       0.156655\n",
-       "06037300200       0.339691"
+       "             NDVI_20210517  Land_area_m2\n",
+       "Tract_FIPS                              \n",
+       "06037262601       0.469434       3620351\n",
+       "06037300100       0.418855       4591342\n",
+       "06037300501       0.265917       1260255\n",
+       "06037310701       0.156655        515339\n",
+       "06037300200       0.339691       1943986"
       ]
      },
      "execution_count": 25,
@@ -1190,9 +1197,10 @@
     }
    ],
    "source": [
-    "ndvi = tracts[[\"GEOID\", \"NDVI_20210517\"]]\n",
+    "ndvi = tracts[[\"GEOID\", \"NDVI_20210517\", \"ALAND\"]]\n",
     "ndvi = ndvi.set_index(\"GEOID\")\n",
     "ndvi.index.name = \"Tract_FIPS\"\n",
+    "ndvi.columns = [\"NDVI_20210517\", \"Land_area_m2\"]\n",
     "ndvi.head()"
    ]
   },
