--- a/3-join-and-visualize.ipynb
+++ b/3-join-and-visualize.ipynb
@@ -1213,7 +1213,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f9240f51b70>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f9c06b77c40>"
       ]
      },
      "execution_count": 19,
@@ -1620,7 +1620,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f923840fa60>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f9bfe4bffa0>"
       ]
      },
      "execution_count": 23,
@@ -1757,13 +1757,13 @@
     }
    ],
    "source": [
-    "raceplot2 = demo.plot(kind = \"scatter\",\n",
+    "raceplot = demo.plot(kind = \"scatter\",\n",
     "                      x = \"Race_one_white_percent\",\n",
     "                      y = \"NDVI_20210517\",\n",
     "                      sharex = False,\n",
     "                      figsize = (12, 10),\n",
     "                      alpha = 0.2)\n",
-    "raceplot2.set(ylim = (0, 0.6),\n",
+    "raceplot.set(ylim = (0, 0.6),\n",
     "               xlim = (0, 100))\n",
     "plt.xlabel(\"White Residents (%)\", fontsize = 14)\n",
     "plt.ylabel(\"Neighboorhood Green Space\\n(NDVI)\", fontsize = 14)\n",
@@ -1772,6 +1772,16 @@
     "             xy = (2, 0.015),\n",
     "             horizontalalignment = \"left\",\n",
     "             size = 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "8debd767-8fcd-4477-a586-c409454dd4ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raceplot.get_figure().savefig(\"images/race.png\")"
    ]
   },
   {
@@ -1784,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "7cf51f40-7075-41da-8ca2-8ebf21181e87",
    "metadata": {},
    "outputs": [
@@ -1794,7 +1804,7 @@
        "Text(200, 0.015, 'Each point represents one census tract in LA or Orange counties.')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1831,6 +1841,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "286928e0-31b3-4663-9089-02899ec84d2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "densityplot.get_figure().savefig(\"images/pop_density.png\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bcdc3e93-9d66-44b2-a227-dceafb113108",
    "metadata": {
@@ -1858,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "e39919b8-ecfe-4b62-9d18-a5399381aed9",
    "metadata": {},
    "outputs": [],
@@ -1868,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "eb962368-25c5-4493-96f5-8b29d954e669",
    "metadata": {},
    "outputs": [],
@@ -1879,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "3a7c1276-d63b-4fb0-8352-1dacc8ac8e88",
    "metadata": {},
    "outputs": [
@@ -2154,7 +2174,7 @@
        "max                    440616.000000       0.538042  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2165,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "31065133-598d-414c-97b5-55ea8a805f8a",
    "metadata": {},
    "outputs": [
@@ -2190,7 +2210,7 @@
        " 'NDVI_20210517']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2209,7 +2229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "4bb79152-223a-4bfe-a790-6c702c77c0cd",
    "metadata": {},
    "outputs": [],
@@ -2220,7 +2240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "0dbe151d-c2fc-484e-85e4-f1b187d2fa33",
    "metadata": {},
    "outputs": [
@@ -2230,7 +2250,7 @@
        "9"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2242,7 +2262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "16ee7f9a-7e6f-4d36-ab81-1301d030d769",
    "metadata": {
     "tags": []
@@ -2257,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "9fff45b4-927b-45d4-8c70-faaaf145ea06",
    "metadata": {},
    "outputs": [
@@ -2540,7 +2560,7 @@
        "06037300200                                           2.547415   "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2567,7 +2587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "0fde96be-9279-400e-a51c-4ab60bd775f0",
    "metadata": {
     "tags": []
@@ -2580,7 +2600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "1328654b-5049-4582-9bc4-8a7f3f691a8e",
    "metadata": {},
    "outputs": [],
@@ -2591,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "1d4d401c-00c4-427f-a1e1-090236676985",
    "metadata": {},
    "outputs": [
@@ -2729,7 +2749,7 @@
        "Workers_who_commute_to_work_work_from_home_percent   1.940661e-72  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2761,7 +2781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "c754637b-cbf1-49a3-86c2-c5cdc1390ad7",
    "metadata": {},
    "outputs": [
@@ -2771,7 +2791,7 @@
        "Text(4000, 0.015, 'Each point represents one census tract in LA or Orange counties.')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2808,6 +2828,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "8dd54e25-0d10-46f3-a29f-f1fcd8675799",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "incomeplot.get_figure().savefig(\"images/income.png\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "baf8570e-149f-4f90-84b8-18521bee4f0a",
    "metadata": {},
@@ -2833,7 +2863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "id": "7772db9a-a171-4dbd-a772-9b379c6ff40b",
    "metadata": {},
    "outputs": [],
@@ -2843,7 +2873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "id": "a1baa04d-3763-47b0-bdb2-bd567819a3e9",
    "metadata": {},
    "outputs": [],
@@ -2854,7 +2884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "id": "fef359b7-dfc4-443a-8a3c-3e623b071f84",
    "metadata": {},
    "outputs": [
@@ -3176,7 +3206,7 @@
        "[5 rows x 55 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3187,7 +3217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "id": "aaa9e74b-0f24-4f10-a42d-57e29f09434f",
    "metadata": {},
    "outputs": [
@@ -3251,7 +3281,7 @@
        " 'NDVI_20210517']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3270,7 +3300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "id": "d9faa216-6f40-49d1-a8d5-7a602b5386a2",
    "metadata": {},
    "outputs": [],
@@ -3325,7 +3355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "id": "9e42d01e-5cb5-4e57-a7a5-7453591351b5",
    "metadata": {
     "tags": []
@@ -3340,7 +3370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "id": "71b7b1ba-00ff-42f3-b948-2d0a0ed85c26",
    "metadata": {},
    "outputs": [
@@ -3670,7 +3700,7 @@
        "[5 rows x 55 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3697,7 +3727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "id": "280a157b-c9d9-4e34-a6f3-deba8f3758f4",
    "metadata": {
     "tags": []
@@ -3710,7 +3740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "id": "0bd44be9-7cd8-4065-98c0-b0c1f0fc0fa5",
    "metadata": {},
    "outputs": [],
@@ -3721,7 +3751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "id": "f4dd99d5-ee80-431c-9c85-d9f42ac98940",
    "metadata": {},
    "outputs": [
@@ -4125,7 +4155,7 @@
        "Year_of_housing_structures_built_1939_or_before...   2.741994e-26  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4167,7 +4197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "id": "4da4ac69-9417-4ccd-8ecf-53dd2066851d",
    "metadata": {},
    "outputs": [
@@ -4248,7 +4278,7 @@
        "06037300200                      40.222335       0.339691  Los Angeles"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4263,7 +4293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "id": "b1fa083e-1565-42f3-9d8a-388f9cafbdd6",
    "metadata": {},
    "outputs": [
@@ -4273,7 +4303,7 @@
        "Text(1, 0.015, 'Each point represents one census tract in LA or Orange counties.')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4309,6 +4339,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "dd069329-d15d-471d-a9a2-5b4705fe9d18",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'AxesSubplot' object has no attribute 'savefig'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [54]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mresidencyplot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msavefig\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mimages/residency_length.png\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'AxesSubplot' object has no attribute 'savefig'"
+     ]
+    }
+   ],
+   "source": [
+    "residencyplot.savefig(\"images/residency_length.png\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "96229bf1-b94e-4b1e-903c-0b9688dbd178",
    "metadata": {},
@@ -4319,7 +4371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "c1f15c31-6105-4386-986c-c2757d833341",
    "metadata": {},
    "outputs": [],
@@ -4330,7 +4382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "b74eaa6a-be30-4a16-99f4-b266d9b3c41b",
    "metadata": {},
    "outputs": [],
@@ -4342,7 +4394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "7324442b-7c23-491c-ad2b-86a620540ba8",
    "metadata": {},
    "outputs": [],
@@ -4361,31 +4413,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "650bb154-e26a-4a0e-a355-912e65cfc4f2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['20-34', '35-54', '55+', 'NDVI_20210517', 'County',\n",
-       "       'Race_white_percent', 'Pop_density_per_km2',\n",
-       "       'Residency_before_2000_percent'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "greenspace.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "fa6c73ab-4865-4a75-a983-43d3e1104246",
    "metadata": {},
    "outputs": [],
@@ -4402,150 +4440,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "3079108b-60fa-4620-a9e4-97bb33b2340b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Age_20-34_percent</th>\n",
-       "      <th>Age_35-54_percent</th>\n",
-       "      <th>Age_55+_percent</th>\n",
-       "      <th>NDVI_2021-05-17</th>\n",
-       "      <th>County</th>\n",
-       "      <th>Race_white_percent</th>\n",
-       "      <th>Pop_density_per_km2</th>\n",
-       "      <th>Residency_before_2000_percent</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Tract_FIPS</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>06037262601</th>\n",
-       "      <td>11.040828</td>\n",
-       "      <td>24.583094</td>\n",
-       "      <td>26.135710</td>\n",
-       "      <td>0.469434</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>76.365727</td>\n",
-       "      <td>960.680332</td>\n",
-       "      <td>35.876742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>06037300100</th>\n",
-       "      <td>10.766046</td>\n",
-       "      <td>28.666985</td>\n",
-       "      <td>21.054308</td>\n",
-       "      <td>0.418855</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>66.746297</td>\n",
-       "      <td>1367.574012</td>\n",
-       "      <td>48.178506</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>06037300501</th>\n",
-       "      <td>14.511352</td>\n",
-       "      <td>31.359000</td>\n",
-       "      <td>19.315564</td>\n",
-       "      <td>0.265917</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>55.347154</td>\n",
-       "      <td>2411.416737</td>\n",
-       "      <td>33.734940</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>06037310701</th>\n",
-       "      <td>23.856671</td>\n",
-       "      <td>21.499293</td>\n",
-       "      <td>29.467232</td>\n",
-       "      <td>0.156655</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>80.433758</td>\n",
-       "      <td>4115.737408</td>\n",
-       "      <td>12.346760</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>06037300200</th>\n",
-       "      <td>13.834139</td>\n",
-       "      <td>25.734474</td>\n",
-       "      <td>25.529937</td>\n",
-       "      <td>0.339691</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>54.072146</td>\n",
-       "      <td>2766.480829</td>\n",
-       "      <td>40.222335</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Age_20-34_percent  Age_35-54_percent  Age_55+_percent  \\\n",
-       "Tract_FIPS                                                           \n",
-       "06037262601          11.040828          24.583094        26.135710   \n",
-       "06037300100          10.766046          28.666985        21.054308   \n",
-       "06037300501          14.511352          31.359000        19.315564   \n",
-       "06037310701          23.856671          21.499293        29.467232   \n",
-       "06037300200          13.834139          25.734474        25.529937   \n",
-       "\n",
-       "             NDVI_2021-05-17       County  Race_white_percent  \\\n",
-       "Tract_FIPS                                                      \n",
-       "06037262601         0.469434  Los Angeles           76.365727   \n",
-       "06037300100         0.418855  Los Angeles           66.746297   \n",
-       "06037300501         0.265917  Los Angeles           55.347154   \n",
-       "06037310701         0.156655  Los Angeles           80.433758   \n",
-       "06037300200         0.339691  Los Angeles           54.072146   \n",
-       "\n",
-       "             Pop_density_per_km2  Residency_before_2000_percent  \n",
-       "Tract_FIPS                                                       \n",
-       "06037262601           960.680332                      35.876742  \n",
-       "06037300100          1367.574012                      48.178506  \n",
-       "06037300501          2411.416737                      33.734940  \n",
-       "06037310701          4115.737408                      12.346760  \n",
-       "06037300200          2766.480829                      40.222335  "
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "greenspace.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "da0f7b0a-7052-4abd-acbf-2a65d874e31c",
    "metadata": {},
    "outputs": [],
